# sage-github-manager

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  MANIFEST.in  MISSING_FEATURES.md  Makefile  README.md  config.example.json  pyproject.toml  pytest.ini  quickstart.sh  ruff.toml  setup.py
.github/: copilot-instructions.md
.github/agents/: sage-github.agent.md
.github/workflows/: ci.yml
docs/: AI_FEATURES.md  CONTRIBUTING.md  DEVELOPMENT.md  EXTRACTION_SUMMARY.md  FAQ.md  IMPLEMENTATION_PROGRESS.md  MISSING_FEATURES.md  PROJECT_SUMMARY.md  QUICK_START.md  SETUP_GUIDE.md  VSCODE_READY.md
examples/: advanced_usage.py  basic_usage.py
src/sage_github/: __init__.py  cli.py  cli_main.py  config.py  issue_data_manager.py  manager.py  tests.py
src/sage_github/helpers/: __init__.py  _github_operations.py  ai_analyzer.py  ai_helper.py  batch_operations.py  create_issue.py  download_issues.py  execute_fix_plan.py  export_issues.py  filter_issues.py  get_boards.py  get_paths.py  get_team_members.py  github_helper.py  organize_issues.py  progress_bar.py  sync_issues.py
tests/: __init__.py  test_basic.py  test_batch_commands.py  test_config.py  test_export_command.py  test_list_command.py
